# maroid

./: .env.example  .gitignore  .golangci.yaml  docker-compose.yaml  go.work  go.work.example  go.work.sum
.docker/hub-with-plugins/: Dockerfile  plugins-builder.sh
.docker/plugin-compiler/: Dockerfile  build.sh
apps/deck/: package.json
apps/deck/src/: app.css  app.html
apps/hub/: go.mod  go.sum
apps/hub/cmd/: hub.go
apps/hub/db/: migration_source.go
firmware/jasmine-node/: .gitignore  CMakeLists.txt
firmware/jasmine-node/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
firmware/jasmine-node/main/include/: adc.h  bh1750_task.h  dht_task.h  event_wait.h  mqtt.h  nvs_setup.h  sntp.h  soil_moisture_task.h  wifi.h
firmware/jasmine-node/main/net/: mqtt.c  mqtt.h  sntp.c  wifi.c
firmware/jasmine-node/main/peripherals/: adc.c  adc.h  i2c.c  i2c.h
firmware/jasmine-node/main/sensors/: bh1750_sensor.c  bh1750_sensor.h  bh1750_task.c  dht_sensor.c  dht_sensor.h  dht_task.c  mq135_sensor.c  mq135_sensor.h  sensor_registry.c  sensor_registry.h  sensor_task.c  sensor_task.h  soil_moisture_sensor.c  soil_moisture_sensor.h  soil_moisture_task.c
firmware/jasmine-node/main/storage/: nvs.c
libs/notifier/: config.go  doc.go  go.mod  go.sum
libs/notifier/dispatcher/: dispatcher.go
libs/notifier/registry/: registry.go
libs/notifierapi/: go.mod  message.go  notifier.go
libs/pluginapi/: cron.go  database.go  go.mod  go.sum  host.go  id.go  metadata.go  mqtt.go  plugin.go  route.go  telegram.go  ui.go
libs/pluginconfig/: config.go  go.mod  go.sum
plugins/foo/: config.go  go.mod  main.go
plugins/gwp/: go.mod  go.sum  main.go
plugins/gwp/config/: config.go
plugins/gwp/dto/: api-client.go  doc.go
plugins/gwp/job/: readings_collector.go
plugins/gwp/service/: api-client.go  doc.go
plugins/jasmine/: go.mod  go.sum  main.go
plugins/jasmine/model/: doc.go  environment.go  measurement.go  plant.go  source_type.go
plugins/jasmine/repository/: environment.go  measurement.go  plant.go
plugins/parking/: go.mod  go.sum  main.go
plugins/parking/config/: config.go
plugins/parking/dto/: api-client.go
plugins/parking/service/: api-client.go
plugins/pensions/: go.mod  go.sum  main.go
plugins/tbilisi-energy/: go.mod  go.sum  main.go
plugins/telasi/: go.mod  go.sum  main.go
(+181 files in other folders)
